nav component added

--- a/src/index.html
+++ b/src/index.html
@@ -8,25 +8,32 @@
 </head>
 <body>
 
-    <!-- START OF BRAND SECTION -->
-    <section id="brand">
+    <!-- START OF NAVIGATION SECTION -->
+    <section id="main-nav">
         <div class="wrapper">
-
-            <!-- Logo -->
-            <a href="#" id="logo">
-                <img src="../images/logo.png" alt="">
-            </a>
-
-            <!-- Toggle switcher -->
-            <div class="switcher-wrapper">
-                <div class="white">თეთრი</div>                     
-                <div class="black">შავი</div>
-            </div>
-
+            <a class="brand-logo" href=""><img src="https://i.ibb.co/Jr8vqZZ/Logo.png" alt="#"></a>
+            <ul class="inner-nav-item-wrapper">
+                <ul class="floor-wrapper">
+                    <li><a href="#" class="floor-1"></a> სართული 1 </li>
+                    <li><a href="" class="floor-2"></a> სართული 2 </li>
+                    <li><a href="" class="floor-3"></a> სართული 3 </li>
+                </ul>
+                <ul class="language-switcher">
+                    <li>
+                        <a href="#"> ქართ 
+                            <span class="switcher"> 
+                                <img src="https://i.ibb.co/0t3kHNk/switcher-ge.png" alt=""> 
+                            </span> ENG 
+                        </a>
+                    </li>
+                </ul>
+            </ul>
         </div>
     </section>
-    <!-- END OF BRAND SECTION -->
-<!-- SCRIPT FILE -->
+    <!-- END OF NAVIGATION SECTION -->
+
+
+<!-- SCRIPT FILE -->    
 <script src="index.js"></script>
 </body>
 </html>
