--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,23 @@
     </section>
     <!-- End Of Stage Slider -->
 
+    <!-- Start of Map section -->
+    <section id="location-map">
+        <div class="wrapper">
+
+
+        </div>
+    </section>
+    <!-- End of Map section -->
+
+    <!-- Start of registration popup -->
+    <section id="registration-popup">
+        <div class="wrapper">
+            
+        </div>
+    </section>
+    <!-- End of of Registration popup -->
+
 
 <!-- SCRIPT FILE -->    
 <script src="index.js"></script>
