--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
     <section id="building-slider">
         <div class="wrapper">
             <div class="buttons-wrapper">
-                <h4> სართულები </h4>
+                <h4> სართული </h4>
                 <button data-btn="1" class="floor1">1</button>
                 <button data-btn="2" class="floor2">2</button>
                 <button data-btn="3" class="floor3">3</button>
