--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
         </div>
         <div class="about-us-wrapper">
             <div class="wrapper">
-                <button class="reg-button"> მესიჯის გაგზავნა </button>
+                <button id="reg-btn" class="reg-button"> მესიჯის გაგზავნა </button>
                 <h1> ჩვენს შესახებ </h1>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, repudiandae repellat, aperiam eligendi distinctio, quod reprehenderit nisi molestiae sit est alias minima corrupti at? Fuga quos libero iusto ipsam aliquam ad illo error rerum! Eligendi nostrum consequuntur dolor repudiandae, ab dolores, quaerat facere ut odio accusantium, doloribus placeat! Aut omnis error dicta debitis, ratione possimus sapiente suscipit. Velit ducimus consequatur rem ullam magnam sapiente dolor ea incidunt porro quaerat, eligendi culpa, voluptatem facilis beatae vel iste debitis. Enim quia tempora unde perferendis omnis minima reiciendis maiores, corrupti non magnam nam dolore? Modi ea eius a corporis. Facilis reiciendis tempore placeat? </p>
             </div>
@@ -102,6 +102,7 @@
     <section id="registration-popup">
         <div class="wrapper">
             <div id="popup">
+                <span id="toggler">X</span>
                 <div class="logo left">
                     <div class="logo-wrapper">
                         <img src="https://i.ibb.co/H23p2rw/Asset-1.png" alt="">
