--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+  
 
     <!-- START OF NAVIGATION SECTION -->
     <section id="main-nav">
@@ -91,7 +92,7 @@
         <div class="about-us-wrapper">
             <div class="wrapper">
                 <button id="reg-btn" class="reg-button"> მესიჯის გაგზავნა </button>
-                <h1> ჩვენს შესახებ </h1>
+                <h1 class="custom-font"> ჩვენს შესახებ </h1>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, repudiandae repellat, aperiam eligendi distinctio, quod reprehenderit nisi molestiae sit est alias minima corrupti at? Fuga quos libero iusto ipsam aliquam ad illo error rerum! Eligendi nostrum consequuntur dolor repudiandae, ab dolores, quaerat facere ut odio accusantium, doloribus placeat! Aut omnis error dicta debitis, ratione possimus sapiente suscipit. Velit ducimus consequatur rem ullam magnam sapiente dolor ea incidunt porro quaerat, eligendi culpa, voluptatem facilis beatae vel iste debitis. Enim quia tempora unde perferendis omnis minima reiciendis maiores, corrupti non magnam nam dolore? Modi ea eius a corporis. Facilis reiciendis tempore placeat? </p>
             </div>
         </div>
@@ -147,6 +148,14 @@
         </div>
     </section>
     <!-- End of of Registration popup -->
+
+    <!-- Start of footer -->
+    <section id="foooter">
+      <footer>
+
+      </footer>
+    </section>
+    <!-- End of Footer -->
 
 
 <!-- SCRIPT FILE -->    
