--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
   
 
-    <!-- START OF NAVIGATION SECTION -->
+    <!-- navigation -->
     <section id="main-nav">
         <div class="wrapper">
             <a class="brand-logo" href=""><img src="https://i.ibb.co/Jr8vqZZ/Logo.png" alt="#"></a>
